Modification de l'apparence du LapReset button, rajout de l'option du reset sur le LapResetBtn, modification de l'apparence global

--- a/style.css
+++ b/style.css
@@ -39,8 +39,8 @@ body {
 
 .mainStartBtn{
     border-radius: 50%;
-    border: 50% solid #023a01;
-    padding: 15px;
+    border: 5px solid #023a01;
+    padding: 10px;
 }
 
 .startBtn{
@@ -70,5 +70,4 @@ body {
 .timerStartedMain{
     border: 5px solid #340C00;
     
-
 }
