--- a/style.css
+++ b/style.css
@@ -71,3 +71,13 @@ body {
     border: 5px solid #340C00;
     
 }
+
+.lap{
+    display: flex;
+    justify-content: space-between;
+    margin-left: 300px;
+    margin-right: 300px;
+    margin-top: 30px;
+    font-size: 60px;
+    color: white;
+}
